Tue Mar  5 22:16:58 2002  Owen Taylor  <otaylor@redhat.com>

	* GTK+-2.0.0 rc1

	* docs/tutorial,faq/Makefile.am: Deal with the html directory
	already being there.

	* docs/faq/Makefile.am (EXTRA_DIST): Add gtk-faq.sgml to EXTRA_DIST.

2002-03-05  Manish Singh  <yosh@gimp.org>

	* gdk/Makefile.am
	* gtk/Makefile.am: use install-foo-hook instead of install-foo-local,
        since foo-local is run before the their respective builtin targets
	in automake 1.5

2002-03-05  jacob berkman  <jacob@ximian.com>

	* configure.in: change an == to =

2002-03-06  Tor Lillqvist  <tml@iki.fi>

	* gdk-pixbuf/gdk_pixbuf.rc.in
	* gdk/win32/rc/gdk.rc.in
	* gtk/gtk-win32.rc.in: Use GTK_API_VERSION.

2002-03-05  Manish Singh  <yosh@gimp.org>

	* configure.in: Fix up the freetype checking logic. Suppress
	suprious "no" with --disable-modules.

2002-03-06  Tor Lillqvist  <tml@iki.fi>
	* gdk/win32/gdkevents-win32.c (gdk_pointer_grab,
	gdk_pointer_ungrab): Bypass calls to the grab/ungrab functions in
	gdkinput-win32.c, as they don't effectively do anything anyway.
	(build_key_event_state): Set MOD2 bit if key is in AltGr group.
	(gdk_event_translate): Call _gdk_windowing_window_get_offsets()
	each time the offsets are used, on the window they refer to,
	instead of once in the beginning. The window in question might
	change due to event propagation.
	(gdk_event_translate): Set key event group to 0 for non-AltGr
	keys. Do set the SHIFT bit in the key event state also for
	ISO_Left_Tab. Now backtabbing finally works again.

	* gdk/win32/gdkunput-win32.c: Minor debugging output change.

	* gdk/win32/gdkkeys-win32.c (update_keymap): Set VK_TAB mapping to
	Gdk_Tab and GDK_ISO_Left_Tab, like on X11.
	(gdk_keymap_translate_keyboard_state): Add similar code as in the
	non-XKB case on X11 to generate a more correct
	consumed_modifiers. Add debugging output.
	(gdk_keyval_name): Use the U+xxxx format for UCS characters
	encoded as keyvals. Never return NULL, but hex number